Starting servlet userStats